@@ -17,7 +17,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.76
+Release: 0.77
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -517,10 +517,13 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
-* Fri Aug  9 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.76
+* Fri Aug  9 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.77
 - python: add return codes for rollbacks and fooDB methods.
 - avoid generating fingerprints for locale/zoneinfo sub-directories.
 - python: add (optional) ts.check() callback.
+- python: include instance in IDTXload, filename in IDTXglob, return
+- python: argument to ts.addErase (if integer) deletes that instance.
+- python: rpmmi methods to return this instance, and number of members.
 
 * Wed Aug  7 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.75
 - fix: src.rpm installs need fd pos at payload.
